<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/setting_title_profiles_Security">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_java"
            android:key="profileStandard_javascript"
            android:summary="@string/setting_title_javascript" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_popup"
            android:key="profileStandard_javascriptPopUp"
            android:summary="@string/setting_title_javascript_popUp" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_location"
            android:key="profileStandard_location"
            android:summary="@string/setting_title_location" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_camera"
            android:key="profileStandard_camera"
            android:summary="@string/setting_title_camera" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_microphone"
            android:key="profileStandard_microphone"
            android:summary="@string/setting_title_microphone" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_profiles_privacy">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_history"
            android:key="profileStandard_saveHistory"
            android:summary="@string/album_title_history" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_cookie"
            android:key="profileStandard_cookies"
            android:summary="@string/setting_title_cookie" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_cookie"
            android:key="profileStandard_cookiesThirdParty"
            android:summary="@string/setting_title_cookie_thirdParty" />

        <CheckBoxPreference
            android:key="profileStandard_deny_cookie_banners"
            android:icon="@drawable/icon_cookie"
            android:summary="@string/setting_title_deny_cookie_banners"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_dom"
            android:key="profileStandard_dom"
            android:summary="@string/setting_title_dom" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_adblock"
            android:key="profileStandard_adBlock"
            android:summary="@string/setting_title_adblock" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_fingerprint"
            android:key="profileStandard_fingerPrintProtection"
            android:summary="@string/setting_title_fingerPrint" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_tracking"
            android:key="profileStandard_trackingULS"
            android:summary="@string/setting_title_trackingURL" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_profiles_dataUsage">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_image"
            android:key="profileStandard_images"
            android:summary="@string/setting_title_images" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_savedata"
            android:key="profileStandard_saveData"
            android:summary="@string/setting_title_save_data" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_title_ui">

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_movie"
            android:key="profileStandard_drm"
            android:summary="@string/hint_DRM_Media" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:icon="@drawable/icon_night"
            android:key="profileStandard_night"
            android:summary="@string/menu_nightView" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:icon="@drawable/icon_desktop"
            android:key="profileStandard_desktop"
            android:summary="@string/menu_desktopView" />

    </PreferenceCategory>

</PreferenceScreen>