<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:summary="@string/data_summary" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="database"
        android:title="@string/title_appDatabase"
        android:summary="@string/setting_backup_sumDatabase"
        android:icon="@drawable/icon_database" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="settings"
        android:title="@string/setting_label"
        android:summary="@string/setting_backup_sumSettings"
        android:icon="@drawable/icon_settings" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="bookmark_simple"
        android:title="@string/album_title_bookmarks_html"
        android:icon="@drawable/icon_bookmark" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="sp_backup_quit"
        android:title="@string/setting_backup_ext"
        android:icon="@drawable/icon_alert" />


</PreferenceScreen>